--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=resume"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Курс Java SE + Web</title>
 </head>
 <body>
-<header>Школа<a href="http://u-rise.com/" target="_blank">U-rise</a></header>
-<h1>Курс JavaSE + Web</h1>
-<footer>Школа<a href="http://u-rise.com/" target="_blank">U-rise</a></footer>
+<p><a href="resume">Resume List</a></p>
 </body>
 </html>
